--- a/src/main/webapp/static/room/room.css
+++ b/src/main/webapp/static/room/room.css
@@ -47,6 +47,11 @@
   padding-left: 18px;
 }
 
+.user-list li {
+  padding: 6px 0;
+  border-bottom: 1px dashed #eee;
+}
+
 .chat-log {
   height: 360px;
   overflow: auto;
