feat: 로비 -> 게임 시작 playType 파라미터 연동 (#60)

--- a/src/main/webapp/static/room/room.css
+++ b/src/main/webapp/static/room/room.css
@@ -85,3 +85,9 @@ button {
 button:hover {
   background: #f5f5f5;
 }
+
+.side-nav {
+	display:flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
