--- a/src/main/webapp/static/room/room.css
+++ b/src/main/webapp/static/room/room.css
@@ -85,3 +85,18 @@ button {
 button:hover {
   background: #f5f5f5;
 }
+
+.side-nav {
+	display:flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.chat-msg {
+  white-space: pre-wrap; /* 줄바꿈 유지 */
+  color: #000;           /* 안 보이는 경우 대비 */
+}
+
+.chat-row {
+  margin-bottom: 6px;
+}
